--- a/css/styles.css
+++ b/css/styles.css
@@ -130,6 +130,8 @@ img {
 .hero {
     background: #2F303A;
     text-align: center;
+    padding-top: 200px;
+    padding-bottom: 200px;
 }
 .section-hero,
 .btn-hero {
@@ -153,6 +155,8 @@ img {
     text-align: center;
     line-height: 1.88;
     border-radius: 4px;
+    min-width: 200px;
+    min-height: 50px;
     color: var(--second-accent-color);
     background: var(--accent-color);
 }
@@ -252,7 +256,6 @@ img {
     font-size: 16px;
     line-height: 1.19;
     text-align: center;
-    margin-top: 30px;
     color: var(--basic-color);
 }
 
@@ -317,6 +320,9 @@ img {
     display: flex;
     justify-content: center;
 }
+/* .filters-li {
+    margin: 6px,22px;
+} */
 
 .filters-li:not(:last-child) {
     margin-right: 8px;
@@ -333,13 +339,15 @@ img {
     line-height: 1.63;
     text-align: center;
     letter-spacing: 0.03em;
+    padding: 6px 22px;
     color: var(--basic-color);
     background: #F5F4FA;
     border-radius: 4px;
 }
 .products {
     border:1px solid #EEEEEE;
-    margin-bottom: 20px;
+    /* margin-bottom: 20px; */
+    padding: 20px 24px;
 }
 .products-name {
     display: block;
@@ -349,8 +357,6 @@ img {
     line-height: 2;
     letter-spacing: 0.06em;
     margin-top: 20px;
-    margin-bottom: 4px;
-    margin-left: 24px;
     color: var(--basic-color);
 }
 .products-text{
@@ -359,8 +365,6 @@ img {
     line-height: 1.83;
     margin-top: 4px;
     letter-spacing: 0.03em;
-    margin-bottom: 30px;
-    margin-left: 24px;
     color: var(--second-color);
 }
 
@@ -372,10 +376,14 @@ img {
 }
 .products-li {
     margin-right: 30px;
+    margin-bottom: 30px;
 }
 
 .products-li:nth-child(3n) {
     margin-right: 0;
+}
+.products-li:nth-last-child(-n+3) {
+    margin-bottom: 0;
 }
 
 .btn-text:hover,
